# parliament-kanban

./: .gitignore  Bill.py  MP.py  Makefile  README.md  SystemID.py  _config.yml  index.html  main.py  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: ci.yml
_data/: bills.yaml  bills.yml  coalition.yml  parties.yml
assets/css/: style.scss  styles.scss
assets/js/: bills.js  scripts.js
