[project]
name = "parliament-kanban"
version = "0.1.0"
description = "A kanban board view of all bills in the current parliament."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=4.9.0",
    "lxml-html-clean>=0.4.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "termcolor>=3.1.0",
]
